# OpenOrbitalOptimizer

./: 404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  README.md  index.html  mkdocs.yml
.github/workflows/: ci.yml  main.yml
OOOApi/: index.html
OOOApi/annotated/: index.html
OOOApi/armadillo__compat_8hpp/: index.html
OOOApi/armadillo__compat_8hpp_source/: index.html
OOOApi/cg__optimizer_8hpp/: index.html
OOOApi/cg__optimizer_8hpp_source/: index.html
OOOApi/classOpenOrbitalOptimizer_1_1Armadillo_1_1SCFSolver/: index.html
OOOApi/classOpenOrbitalOptimizer_1_1SCFSolver/: index.html
OOOApi/classOpenOrbitalOptimizer_1_1SCFSolver_1_1LogStream/: index.html
OOOApi/class_member_enums/: index.html
OOOApi/class_member_functions/: index.html
OOOApi/class_member_typedefs/: index.html
OOOApi/class_member_variables/: index.html
OOOApi/class_members/: index.html
OOOApi/classes/: index.html
OOOApi/dir_3072c93c56dfbbd2cb4eee0809487533/: index.html
OOOApi/eigen__compat_8hpp/: index.html
OOOApi/eigen__compat_8hpp_source/: index.html
OOOApi/files/: index.html
OOOApi/functions/: index.html
OOOApi/hierarchy/: index.html
OOOApi/links/: index.html
OOOApi/macros/: index.html
OOOApi/modules/: index.html
OOOApi/namespaceEigen/: index.html
OOOApi/namespaceOpenOrbitalOptimizer/: index.html
OOOApi/namespaceOpenOrbitalOptimizer_1_1Armadillo/: index.html
OOOApi/namespaceOpenOrbitalOptimizer_1_1ConjugateGradients/: index.html
OOOApi/namespaceOpenOrbitalOptimizer_1_1HelperRoutines/: index.html
OOOApi/namespace_member_enums/: index.html
OOOApi/namespace_member_functions/: index.html
OOOApi/namespace_member_typedefs/: index.html
OOOApi/namespace_member_variables/: index.html
OOOApi/namespace_members/: index.html
OOOApi/namespaces/: index.html
OOOApi/pages/: index.html
OOOApi/quad__support_8hpp/: index.html
OOOApi/quad__support_8hpp_source/: index.html
OOOApi/scfsolver_8hpp/: index.html
OOOApi/scfsolver_8hpp_source/: index.html
OOOApi/structEigen_1_1NumTraits_3_01__Float128_01_4/: index.html
OOOApi/structOpenOrbitalOptimizer_1_1SCFSolver_1_1AllowedMethods/: index.html
OOOApi/structOpenOrbitalOptimizer_1_1SCFSolver_1_1LBFGSState/: index.html
OOOApi/structOpenOrbitalOptimizer_1_1SCFSolver_1_1OptionInfo/: index.html
OOOApi/structOpenOrbitalOptimizer_1_1SCFSolver_1_1RotationStepContext/: index.html
OOOApi/types_8hpp/: index.html
OOOApi/types_8hpp_source/: index.html
OOOApi/variables/: index.html
assets/.doxy/OOOApi/: hashChanges.yaml
assets/.doxy/OOOApi/OOOApi/: annotated.md  armadillo__compat_8hpp.md  armadillo__compat_8hpp_source.md  cg__optimizer_8hpp.md  cg__optimizer_8hpp_source.md  classOpenOrbitalOptimizer_1_1Armadillo_1_1SCFSolver.md  classOpenOrbitalOptimizer_1_1SCFSolver.md  classOpenOrbitalOptimizer_1_1SCFSolver_1_1LogStream.md  class_member_enums.md  class_member_functions.md  class_member_typedefs.md  class_member_variables.md  class_members.md  classes.md  dir_3072c93c56dfbbd2cb4eee0809487533.md  eigen__compat_8hpp.md  eigen__compat_8hpp_source.md  files.md  functions.md  hierarchy.md  namespaceEigen.md  namespaceOpenOrbitalOptimizer.md  namespaceOpenOrbitalOptimizer_1_1Armadillo.md  namespaceOpenOrbitalOptimizer_1_1ConjugateGradients.md  namespaceOpenOrbitalOptimizer_1_1HelperRoutines.md  namespace_member_functions.md  namespace_member_typedefs.md  namespace_members.md  namespaces.md  quad__support_8hpp.md  quad__support_8hpp_source.md  scfsolver_8hpp.md  scfsolver_8hpp_source.md  structEigen_1_1NumTraits_3_01__Float128_01_4.md  structOpenOrbitalOptimizer_1_1SCFSolver_1_1AllowedMethods.md  structOpenOrbitalOptimizer_1_1SCFSolver_1_1LBFGSState.md  structOpenOrbitalOptimizer_1_1SCFSolver_1_1OptionInfo.md  structOpenOrbitalOptimizer_1_1SCFSolver_1_1RotationStepContext.md  types_8hpp.md  types_8hpp_source.md
assets/.doxy/OOOApi/xml/: Doxyfile.xml  armadillo__compat_8hpp.xml  cg__optimizer_8hpp.xml  classOpenOrbitalOptimizer_1_1Armadillo_1_1SCFSolver.xml  classOpenOrbitalOptimizer_1_1SCFSolver.xml  classOpenOrbitalOptimizer_1_1SCFSolver_1_1LogStream.xml  compound.xsd  dir_3072c93c56dfbbd2cb4eee0809487533.xml  doxyfile.xsd  eigen__compat_8hpp.xml  index.xml  namespaceEigen.xml  namespaceOpenOrbitalOptimizer.xml  namespaceOpenOrbitalOptimizer_1_1Armadillo.xml  namespaceOpenOrbitalOptimizer_1_1ConjugateGradients.xml  namespaceOpenOrbitalOptimizer_1_1HelperRoutines.xml  quad__support_8hpp.xml  scfsolver_8hpp.xml  structEigen_1_1NumTraits_3_01__Float128_01_4.xml  structOpenOrbitalOptimizer_1_1SCFSolver_1_1AllowedMethods.xml  structOpenOrbitalOptimizer_1_1SCFSolver_1_1LBFGSState.xml  structOpenOrbitalOptimizer_1_1SCFSolver_1_1OptionInfo.xml  structOpenOrbitalOptimizer_1_1SCFSolver_1_1RotationStepContext.xml  types_8hpp.xml
changelog/: index.html
cmake/: OpenOrbitalOptimizerConfig.cmake.in
docs/: changelog.md  explanation.md  index.md  reference.md
docs/OOOApi/: index.md
explanation/: index.html
fortran/: OpenOrbitalOptimizer.F90  README.md
how-to-guides/: index.html
openorbital/: CMakeLists.txt
openorbital/include/: cg_optimizer.hpp  orbitalsolver.hpp  scfsolver.hpp
openorbital/src/: atomicsolver.hpp  atomtest.cpp  scfsolver.cpp
openorbitaloptimizer/: armadillo_compat.hpp  cg_optimizer.hpp  eigen_compat.hpp  helper_routines.hpp  quad_support.hpp  scfsolver.hpp  types.hpp
python/: CMakeLists.txt  README.md  _ext.cpp
python/openorbital/: __init__.py
python/openorbital/pyscf/: __init__.py  atomic.py  diatomic.py  molecular.py
python/tests/: test_one_electron.py  test_pyscf_atomic.py  test_pyscf_diatomic.py  test_pyscf_molecular.py  test_settings.py
reference/: index.html
search/: search_index.json
src/: CMakeLists.txt  extern.cpp
tests/: CMakeLists.txt  armadillo_compat.cpp  atomicsolver.hpp  atomtest.cpp  cc-pvdz-fe.json  cc-pvdz.json  cmdline.h  cplxdouble_double.cpp  cplxfloat_float.cpp  double_complex.cpp  eigen_arma_bridge.hpp  float_complex.cpp  float_float.cpp  float_real.cpp  quad_complex.cpp  quad_real.cpp  settings_roundtrip.cpp
tutorials/: index.html
